--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install ansible
 script:
   - echo localhost > inventory
-  - ln -s ansible-role-login ../franklinkim.login
+  - ln -s ansible-login ../franklinkim.login
   - ansible-playbook --syntax-check -i inventory test.yml
   - ansible-playbook -i inventory test.yml --connection=local --sudo -vvvv
