--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -4,10 +4,11 @@
   template: >
     src=etc-login.defs.j2
     dest=/etc/login.defs
+    backup=yes
     owner=root
     group=root
     mode=0644
   tags:
     - system
-    - networking
     - login
+    - config
